tests/success/simple_if_then.tig
if 1 then print("output\n")
