tests/fail/greater_than_operand_types_missmatch.tig
if 1 > "abc" then ()
